[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data=true

[project]
name = "ELiDE"
version = "0.17.2"
authors = [
	{ name="Zachary Spector", email="public@zacharyspector.com" },
]
description = "Extensible Life Simulator Engine Development Environment"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<3.13"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Operating System :: OS Independent",
	"Development Status :: 2 - Pre-Alpha"
]
dependencies = [
	"LiSE>=0.17.0,<0.18.0",
	"kivy>=2.0.0,<3",
	"kivy_garden.collider",
	"kivy-deps.glew ; sys_platform == 'win32'",
	"kivy-deps.sdl2 ; sys_platform == 'win32'",
	"pygments>=2.7.4"
]

[project.urls]
"Homepage" = "https://codeberg.org/clayote/LiSE"
"Bug Tracker" = "https://codeberg.org/clayote/LiSE/issues"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
	"big: marks tests as too big to diagnose specific bugs with"
]
