[project]
name = "LiSE"
version = "0.13.1"
authors = [
	{ name="Zachary Spector", email="public@zacharyspector.com" },
]
description = "Life Simulator Engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries",
	"Development Status :: 2 - Pre-Alpha"
]
dependencies = [
	"astunparse>=1.6.3,<2",
	"blinker>=1.4,<2",
	"lz4>=3.1.3",
	"msgpack>=1.0.0",
	"networkx>=2.4,<2.8"
]

[project.urls]
"Homepage" = "https://tactical-metaphysics.github.io/LiSE/"
"Bug Tracker" = "https://github.com/Tactical-Metaphysics/LiSE/issues"


[project.optional-dependencies]
fast-proxy = ["numpy>=1.19.5,<2"]
server = ["CherryPy>=18.6.1"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
